--- a/references.bib
+++ b/references.bib
@@ -35,3 +35,10 @@
   url = {https://education.github.com/git-cheat-sheet-education.pdf},
   urldate = {2023-03-08}
 }
+
+@online{good-commit-message,
+  title = {How to Write a Git Commit Message},
+  author = {cbeams},
+  url = {https://cbea.ms/git-commit/},
+  urldate = {2023-03-08}
+}
