--- a/main.tex
+++ b/main.tex
@@ -188,6 +188,10 @@
       \item Initializing Repositories
       % \item Commiting Files
       \item gitignore
+      \item Branches
+      \item Remotes
+      \item Servers
+      \item Workflow
     \end{enumerate}
   \end{frame}
 
@@ -219,6 +223,10 @@
   \begin{frame}{Rules of Thumb}
     \begin{enumerate}
       \item Use gitignore whitelisting
+      \item Use SSH keys
+      \item If you are alone, use the default branch
+      \item Use the rules of a good Git commit message
+      \item Thou shalt not kill
     \end{enumerate}
   \end{frame}
 
